--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "idp-redirector-extension",
-  "version": "4.3.0",
-  "description": "idp-redirector-extension",
+  "name": "idp-redirector",
+  "version": "0.0.1",
+  "description": "idp-redirector extension",
   "engines": {
     "node": ">8.9"
   },
@@ -11,9 +11,7 @@
     "validate": "a0-ext validate ./package.json",
     "package": "a0-ext package --client ./dist/client/ --out ./dist",
     "build": "npm run validate && npm run clean && npm run client:build && npm run extension:build && npm run package",
-    "deploy": "a0-ext deploy --package ./dist/package.zip --url http://0.0.0.0:3000/api/extensions",
-    "client:build": "a0-ext build:client ./client/app.jsx ./dist/client",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/thomson-reuters-idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
     "serve:dev": "cross-env NODE_ENV=development nodemon -e js index.js",
     "serve:prod": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require ignore-styles tests/mocha.js './tests/**/*.tests.js'",
