--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idp-redirector",
+  "name": "idp-redirector-2",
   "version": "0.0.1",
   "description": "idp-redirector extension",
   "engines": {
@@ -11,7 +11,7 @@
     "validate": "a0-ext validate ./package.json",
     "package": "a0-ext package --client ./dist/client/ --out ./dist",
     "build": "npm run validate && npm run clean && npm run client:build && npm run extension:build && npm run package",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector-2.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
     "serve:dev": "cross-env NODE_ENV=development nodemon -e js index.js",
     "serve:prod": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require ignore-styles tests/mocha.js './tests/**/*.tests.js'",
