--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-reporter": "^5.0.0",
     "postcss-simple-vars": "^4.1.0",
+    "proxyquire": "^2.1.3",
     "react-bootstrap": "^0.30.6",
     "react-loader-advanced": "^1.4.0",
     "react-pure-render": "^1.0.2",
@@ -135,6 +136,7 @@
     "redux-simple-router": "^2.0.4",
     "redux-static": "^1.0.0",
     "rimraf": "^2.5.2",
+    "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
     "style-loader": "^0.23.1",
     "supertest": "^2.0.1",
