--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "validate": "a0-ext validate ./package.json",
     "package": "a0-ext package --client ./dist/client/ --out ./dist",
     "build": "npm run validate && npm run clean && npm run client:build && npm run extension:build && npm run package",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
+    "extension:build": "npm run lint && a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
+    "lint": "eslint server/**/*.js",
+    "lint-fix": "eslint --fix server/**/*.js",
     "serve:dev": "cross-env NODE_ENV=development nodemon -e js index.js",
     "serve:prod": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test nyc mocha --require ignore-styles tests/mocha.js './tests/**/*.tests.js'",
@@ -31,115 +33,37 @@
   "repository": "https://github.com/auth0-customers/thomson-reuters-idp-redirector.git",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
-    "auth0": "^2.8.0",
     "auth0-extension-express-tools": "2.0.0",
     "auth0-extension-tools": "1.3.3",
-    "auth0-extension-ui": "^1.2.2",
-    "auth0-js": "^9.6.0",
-    "axios": "^0.19.0",
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
-    "codemirror": "^5.19.0",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.4.2",
-    "expect": "^1.20.2",
     "express": "^4.17.1",
     "express-jwt": "^3.4.0",
     "express-jwt-authz": "^2.3.1",
-    "glob": "^7.0.3",
-    "history": "^2.1.2",
-    "immutable": "^3.8.1",
     "joi": "^9.0.4",
-    "json-loader": "^0.5.4",
-    "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.1.0",
-    "jwt-decode": "^2.0.1",
-    "lodash": "^4.8.2",
-    "lru-memoizer": "1.11.2",
-    "moment": "^2.13.0",
     "morgan": "^1.7.0",
-    "ms": "^0.7.1",
     "nconf": "^0.8.4",
-    "p-throttler": "^0.1.1",
-    "prop-types": "^15.6.0",
-    "qs": "^6.5.2",
-    "react": "15.6.1",
-    "react-codemirror": "^0.2.6",
-    "react-dom": "15.6.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.6",
-    "redux": "^3.5.2",
-    "redux-form": "^6.0.5",
-    "redux-logger": "^2.7.0",
-    "redux-promise-middleware": "^4.1.0",
-    "redux-thunk": "2.2.0",
-    "request": "^2.34.0",
-    "reselect": "^2.5.4",
-    "safe-eval": "^0.4.1",
-    "semver": "^5.1.0",
     "snyk": "^1.278.1",
-    "string.prototype.endswith": "^0.2.0",
-    "superagent": "^3.8.3",
     "uuid": "2.0.1",
-    "webtask-tools": "^3.4.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/register": "^7.0.0",
     "auth0-extensions-cli": "^4.0.3",
-    "autoprefixer": "^6.5.1",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-source-map-support": "^2.1.2",
-    "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
-    "chai-match": "^1.1.1",
-    "classnames": "^2.2.5",
     "cross-env": "^3.1.3",
-    "css-loader": "0.26.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-15": "^1.4.0",
     "eslint": "^4.19.1",
-    "eslint-config-auth0": "^6.0.1",
     "eslint-config-auth0-base": "^12.1.0",
-    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.5.0",
-    "expect": "^1.20.2",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^14.0.0",
     "mocha": "^6.1.3",
     "nock": "^9.0.2",
     "nodemon": "^1.11.0",
-    "nyc": "^13.1.0",
-    "postcss-focus": "^3.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-reporter": "^5.0.0",
-    "postcss-simple-vars": "^4.1.0",
+    "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
-    "react-bootstrap": "^0.30.6",
-    "react-loader-advanced": "^1.4.0",
-    "react-pure-render": "^1.0.2",
-    "react-test-renderer": "^15.6.2",
-    "react-transform-hmr": "^1.0.4",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.1.1",
-    "redux-simple-router": "^2.0.4",
-    "redux-static": "^1.0.0",
     "rimraf": "^2.5.2",
     "sinon": "^9.0.2",
-    "source-map-support": "^0.5.19",
-    "style-loader": "^0.23.1",
-    "supertest": "^2.0.1",
+    "supertest": "^4.0.2",
     "webpack": "4.29.6"
   },
   "auth0-extension": {
