Convert to api2 style lint

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "package": "a0-ext package --client ./dist/client/ --out ./dist",
     "build": "npm run validate && npm run clean && npm run client:build && npm run extension:build && npm run package",
     "extension:build": "npm run lint && a0-ext build:server ./webtask.js ./dist && cp ./dist/idp-redirector.extension.$npm_package_version.js ./build/bundle.js && cp ./webtask.json ./dist/webtask.json",
-    "lint": "eslint server/**/*.js",
-    "lint-fix": "eslint --fix server/**/*.js",
+    "lint": "eslint ./",
+    "lint-fix": "eslint --fix ./",
     "serve:dev": "cross-env NODE_ENV=development nodemon -e js index.js",
     "serve:prod": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test nyc mocha --require ignore-styles tests/mocha.js './tests/**/*.tests.js'",
@@ -30,7 +30,7 @@
     "extension"
   ],
   "author": "Auth0",
-  "repository": "https://github.com/auth0-customers/thomson-reuters-idp-redirector.git",
+  "repository": "https://github.com/auth0-customers/idp-redirector.git",
   "license": "MIT",
   "dependencies": {
     "auth0-extension-express-tools": "2.0.0",
@@ -49,17 +49,21 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "@a0/eslint-plugin-auth0-security": "^0.3.2",
+    "acorn": "^7.3.1",
     "auth0-extensions-cli": "^4.0.3",
     "chai": "^4.2.0",
     "cross-env": "^3.1.3",
-    "eslint": "^4.19.1",
-    "eslint-config-auth0-base": "^12.1.0",
-    "eslint-plugin-import": "^2.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-security": "^1.4.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^6.1.3",
     "nock": "^9.0.2",
     "nodemon": "^1.11.0",
     "nyc": "^15.1.0",
+    "prettier": "^1.19.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^2.5.2",
     "sinon": "^9.0.2",
