--- a/.eslintrc
+++ b/.eslintrc
@@ -1,34 +1,62 @@
 {
-  "extends": "auth0-base",
   "env": {
+    "browser": false,
     "node": true,
-    "es6": true,
-    "mocha": true
+    "es6": true
   },
-  "rules": {
-    "max-len": 0,
-    "array-bracket-spacing": [2, "always"],
-    "comma-dangle": [2, "never"],
-    "eol-last": 2,
-    "indent": [2, 2, {
-      "SwitchCase": 1
-    }],
-    "prefer-stateless-function": 0,
-    "new-cap": 0,
-    "no-multiple-empty-lines": 2,
-    "no-unused-vars": 2,
-    "no-param-reassign": 0,
-    "no-var": 2,
-    "object-curly-spacing": [2, "always"],
-    "quotes": [2, "single", "avoid-escape"],
-    "semi": [2, "always"],
-    "strict": 0,
-    "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, {
-      "anonymous": "always",
-      "named": "never"
-    }]
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
+  "extends": [
+    "plugin:prettier/recommended",
+    "plugin:@a0/auth0-security/recommended"
+  ],
   "plugins": [
+    "@a0/auth0-security",
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "no-bitwise": 2,
+    "eqeqeq": 2,
+    "wrap-iife": [
+      2,
+      "any"
+    ],
+    "no-use-before-define": 2,
+    "new-cap": 2,
+    "no-caller": 2,
+    "no-undef": 2,
+    "strict": 0,
+    "no-unused-expressions": 2,
+    "no-eval": 2,
+    "dot-notation": 0,
+    "no-unused-vars": 2,
+    "comma-style": [
+      2,
+      "last"
+    ],
+    "no-irregular-whitespace": 2
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.tests.js",
+        "**/*.test.js",
+        "**/test/**/*.js"
+      ],
+      "env": {
+        "mocha": true
+      },
+      "rules": {
+        // Support chai.js expressions like `.to.be.ok` and `to.be.true`.
+        "no-unused-expressions": 0,
+        "security/detect-non-literal-regexp": 0,
+        "security/detect-non-literal-require": 0
+      }
+    }
   ]
 }
