--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   "dependencies": {
     "auth0-extension-express-tools": "2.0.0",
     "auth0-extension-tools": "1.3.3",
+    "axios": "^0.19.2",
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
     "express": "^4.17.1",
     "express-jwt": "^3.4.0",
     "express-jwt-authz": "^2.3.1",
     "joi": "^9.0.4",
+    "jsonwebtoken": "latest",
     "jwks-rsa": "^1.1.0",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
