--- a/package.json
+++ b/package.json
@@ -34,25 +34,24 @@
   "license": "MIT",
   "dependencies": {
     "auth0-extension-express-tools": "2.0.0",
-    "auth0-extension-tools": "1.3.3",
-    "axios": "^0.19.2",
-    "bluebird": "^3.4.0",
-    "body-parser": "^1.15.1",
-    "express": "^4.17.1",
-    "express-jwt": "^3.4.0",
+    "auth0-extension-tools": "1.4.0",
+    "axios": "0.19.2",
+    "bluebird": "3.5.0",
+    "body-parser": "1.12.4",
+    "express": "4.17.1",
+    "express-jwt": "5.1.0",
     "express-jwt-authz": "^2.3.1",
-    "joi": "^9.0.4",
-    "jsonwebtoken": "latest",
-    "jwks-rsa": "^1.1.0",
-    "morgan": "^1.7.0",
-    "nconf": "^0.8.4",
-    "snyk": "^1.278.1",
-    "uuid": "2.0.1",
-    "winston": "^2.2.0"
+    "joi": "9.0.4",
+    "jsonwebtoken": "8.5.0",
+    "jwks-rsa": "1.6.0",
+    "morgan": "1.9.1",
+    "uuid": "8.0.0",
+    "winston": "3.1.0",
+    "winston-transport": "^4.3.0"
   },
   "devDependencies": {
     "@a0/eslint-plugin-auth0-security": "^0.3.2",
-    "acorn": "^7.3.1",
+    "acorn": "^6.4.1",
     "auth0-extensions-cli": "^4.0.3",
     "chai": "^4.2.0",
     "cross-env": "^3.1.3",
@@ -62,12 +61,14 @@
     "eslint-plugin-security": "^1.4.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^6.1.3",
+    "nconf": "^0.8.4",
     "nock": "^9.0.2",
     "nodemon": "^1.11.0",
     "nyc": "^15.1.0",
     "prettier": "^1.19.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^2.5.2",
+    "snyk": "^1.278.1",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
     "webpack": "4.29.6"
@@ -97,34 +98,20 @@
       "scopes": "create:clients create:resource_servers read:clients read:connections"
     },
     "externals": [
-      "async@2.1.2",
-      "auth0@2.8.0",
-      "aws-sdk@2.5.3",
-      "blipp@2.3.0",
-      "bluebird@3.4.6",
+      "auth0-extension-express-tools@2.0.0",
+      "auth0-extension-tools@1.4.0",
+      "axios@0.19.2",
+      "bluebird@3.5.0",
       "body-parser@1.12.4",
-      "boom@3.2.2",
-      "cookie-parser@1.3.5",
-      "ejs@2.3.1",
-      "express@4.16.3",
-      "iconv-lite@0.4.10",
-      "inert@4.0.1",
+      "express@4.17.1",
+      "express-jwt@5.1.0",
       "joi@9.0.4",
-      "jsonwebtoken@7.1.9",
-      "jwks-rsa@1.1.1",
-      "lodash@4.8.2",
-      "lru-memoizer@1.10.0",
-      "moment@2.11.2",
-      "morgan@1.5.3",
-      "node-uuid@1.4.3",
-      "mime-db@1.10.0",
-      "qs@6.5.2",
-      "request@2.67.0",
-      "superagent@3.8.3",
-      "tough-cookie@2.2.2",
-      "uuid@2.0.1",
+      "jsonwebtoken@8.5.0",
+      "jwks-rsa@1.6.0",
+      "morgan@1.9.1",
+      "uuid@8.0.0",
       "webtask-tools",
-      "winston@1.0.0"
+      "winston@3.1.0"
     ],
     "excluded": [
       "safe-eval",
