--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "acorn": "^6.4.1",
     "auth0-extensions-cli": "^4.0.3",
     "chai": "^4.2.0",
+    "chai-datetime": "^1.6.0",
     "cross-env": "^3.1.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -68,8 +69,8 @@
     "prettier": "^1.19.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^2.5.2",
-    "snyk": "^1.278.1",
     "sinon": "^9.0.2",
+    "snyk": "^1.278.1",
     "supertest": "^4.0.2",
     "webpack": "4.29.6"
   },
