--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "proxyquire": "^2.1.3",
     "rimraf": "^2.5.2",
     "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "snyk": "^1.278.1",
     "supertest": "^4.0.2",
     "webpack": "4.29.6"
