--- a/load-tests/config.prod.yaml
+++ b/load-tests/config.prod.yaml
@@ -1,6 +1,10 @@
 config: # test appliance cluster
-  target: "https://tehsis-tr-w-tenant.appliance-trial.com"
-  processor: "./__processors__/"
+  target: "https://tr-loadtest.wt.lab.testland.auth0.com/idp-redirector/"
+  processor: "./__processors__/index.js"
+  includeFiles:
+    - ./__processors__/cert/certificate.crt
+    - ./__processors__/cert/private.key
+    - ./.env
   phases:
     - duration: 120
       arrivalRate: 2
@@ -14,3 +18,5 @@ config: # test appliance cluster
       arrivalRate: 20
       maxVusers: 100
       name: "Sustained Peak load for 20 mins"
+  plugins:
+    expect: {}
