Try turning off morgan for performance

--- a/load-tests/idpInitiatedSaml.yaml
+++ b/load-tests/idpInitiatedSaml.yaml
@@ -24,18 +24,26 @@ config:
     testland: # test appliance cluster
       target: "https://tr-loadtest.lab.testland.auth0.com"
       phases:
-        - duration: 120
-          arrivalRate: 2
+        - duration: 60
+          arrivalRate: 1
           maxVusers: 5
           name: "Warm up load for 2 mins"
-        - duration: 240
-          arrivalRate: 4
+        - duration: 30
+          arrivalRate: 2
           maxVusers: 10
-          name: "Sustained Normal load 4 mins"
-        - duration: 240
-          arrivalRate: 8
+          name: "Load at 2"
+        - duration: 30
+          arrivalRate: 3
+          maxVusers: 15
+          name: "Load at 3"
+        - duration: 30
+          arrivalRate: 4
           maxVusers: 20
-          name: "Sustained Peak load for 4 mins"
+          name: "Load at 4"
+        - duration: 30
+          arrivalRate: 5
+          maxVusers: 25
+          name: "Load at 5"
     prod: # TR appliance cluster
       target: "https://tr-loadtest.lab.testland.auth0.com"
       phases:
