--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "repository": "https://github.com/auth0-customers/idp-redirector.git",
   "license": "MIT",
   "dependencies": {
+    "agentkeepalive": "^4.1.3",
     "auth0-extension-express-tools": "2.0.0",
     "auth0-extension-tools": "1.4.0",
     "axios": "0.19.2",
