--- a/load-tests/idpInitiatedSamlFormPost.yaml
+++ b/load-tests/idpInitiatedSamlFormPost.yaml
@@ -44,6 +44,29 @@ config:
           arrivalRate: 5
           maxVusers: 25
           name: "Load at 5"
+    tehsis: # test appliance cluster
+      target: "https://tr-loadtest-tehsis.appliance-trial.com"
+      phases:
+        - duration: 120
+          arrivalRate: 1
+          maxVusers: 5
+          name: "Warm up load for 2 mins"
+        - duration: 120
+          arrivalRate: 2
+          maxVusers: 10
+          name: "Load at 2"
+        - duration: 120
+          arrivalRate: 3
+          maxVusers: 15
+          name: "Load at 3"
+        - duration: 120
+          arrivalRate: 4
+          maxVusers: 20
+          name: "Load at 4"
+        - duration: 120
+          arrivalRate: 5
+          maxVusers: 25
+          name: "Load at 5"
     fullcluster: # test appliance cluster: full HC
       target: "https://trd.appliance-trial.com"
       phases:
