--- a/load-tests/airstrike/config.stage.yaml
+++ b/load-tests/airstrike/config.stage.yaml
@@ -2,9 +2,9 @@ config: # cloud
   target: "https://keyc.auth0.com"
   processor: "../__processors__/index.js"
   includeFiles:
-    - ./__processors__/cert/certificate.crt
-    - ./__processors__/cert/private.key
-    - ./.env
+    - ../__processors__/cert/certificate.crt
+    - ../__processors__/cert/private.key
+    - ../.env
   phases:
     - duration: 120
       arrivalRate: 5
