--- a/load-tests/idpInitiatedSamlCodeGrant.yaml
+++ b/load-tests/idpInitiatedSamlCodeGrant.yaml
@@ -7,14 +7,7 @@ config:
   plugins:
     expect: {}
   environments:
-    dev: # localhost
-      target: "http://localhost:3001"
-      phases:
-        - duration: 60
-          arrivalRate: 10
-          maxVusers: 15
-          name: "Warm up load (15 max users)"
-    stag: # cloud
+    stage: # cloud
       target: "https://keyc.auth0.com"
       phases:
         - duration: 120
