--- a/load-tests/idpInitiatedSamlFormPost.yaml
+++ b/load-tests/idpInitiatedSamlFormPost.yaml
@@ -61,28 +61,16 @@ config:
           maxVusers: 25
           name: "Load at 5"
     fullcluster: # test appliance cluster: full HC
-      target: "https://trd.appliance-trial.com"
+      target: "https://trd-test.appliance-trial.com"
       phases:
         - duration: 120
-          arrivalRate: 1
-          maxVusers: 5
+          arrivalRate: 2
+          maxVusers: 20
           name: "Warm up load for 2 mins"
-        - duration: 120
-          arrivalRate: 5
-          maxVusers: 25
-          name: "Load at 2"
-        - duration: 120
-          arrivalRate: 10
-          maxVusers: 50
-          name: "Load at 3"
-        - duration: 120
+        - duration: 900
           arrivalRate: 20
-          maxVusers: 100
-          name: "Load at 4"
-        - duration: 120
-          arrivalRate: 30
-          maxVusers: 150
-          name: "Load at 5"
+          maxVusers: 200
+          name: "Load at 2"
     prod: # TR appliance cluster
       target: "https://tr-loadtest.lab.testland.auth0.com"
       phases:
