--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "8.5.0",
     "jwks-rsa": "1.6.0",
     "morgan": "1.9.1",
+    "semver": "^4.3.4",
     "uuid": "8.0.0",
     "winston": "3.1.0",
     "winston-transport": "^4.3.0"
@@ -114,7 +115,8 @@
       "morgan@1.9.1",
       "uuid@8.0.0",
       "webtask-tools",
-      "winston@3.1.0"
+      "winston@3.1.0",
+      "semver@4.3.4"
     ],
     "excluded": [
       "safe-eval",
